# lingmo-ipc

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: build.yml  package.yml  test.yml
cmake/: LingmoIPCConfig.cmake.in
debian/: changelog  control  copyright  liblingmoipc-dev.install  liblingmoipc1.install
include/LingmoIPC/: DBusConnection.h  DBusService.h  LingmoIPC.h  LingmoIPCExport.h.in  LingmoIPCVersion.h.in  ServiceManager.h
rpm/: lingmo-ipc.spec
src/: CMakeLists.txt
src/LingmoIPC/: DBusConnection.cpp  DBusService.cpp  ServiceManager.cpp
src/LingmoIPC/private/: DBusConnection_p.h  DBusService_p.h  ServiceManager_p.h
tests/: CMakeLists.txt  tst_DBusConnection.cpp  tst_DBusService.cpp  tst_ServiceManager.cpp
